<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="androidx.lifecycle.LiveData"/>
        <import type="com.example.musicapp.models.ListViewTrack"/>
        <variable
            name="currentTrack"
            type="LiveData&lt;ListViewTrack&gt;" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.TrackDetailsFragment"
    android:background="@color/screen_background">

    <ImageView
        android:id="@+id/viewImageTrack"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="100dp"
        android:background="@color/track_playing_background"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/textTrackName"
        style="@style/TrackText.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@{currentTrack.name}"
        app:layout_constraintStart_toStartOf="@+id/viewImageTrack"
        app:layout_constraintTop_toBottomOf="@+id/viewImageTrack"
        tools:text="Track name" />

    <TextView
        android:id="@+id/textTrackArtist"
        style="@style/TrackText.Artist.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@{currentTrack.artist}"
        app:layout_constraintStart_toStartOf="@+id/viewImageTrack"
        app:layout_constraintTop_toBottomOf="@+id/textTrackName"
        tools:text="Artist" />


    <TextView
        android:id="@+id/textTrackProgression"
        style="@style/TrackText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/trackProgressSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/trackProgressSeekBar"
        tools:text="1:12" />

    <TextView
        android:id="@+id/textTrackLength"
        style="@style/TrackText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/trackProgressSeekBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackProgressSeekBar"
        tools:text="3:12" />

    <SeekBar
        android:id="@+id/trackProgressSeekBar"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:max="@{currentTrack.length}"
        android:maxHeight="25dp"
        android:minHeight="25dp"
        android:padding="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:progress="50"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTrackArtist" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_next_arrow"
        app:layout_constraintEnd_toEndOf="@+id/viewImageTrack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTrackProgression"
        app:tint="@color/track_playing_background" />

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_previous_arrow"
        app:layout_constraintStart_toStartOf="@+id/viewImageTrack"
        app:layout_constraintTop_toBottomOf="@+id/textTrackProgression"
        app:tint="@color/track_playing_background" />

    <ImageButton
        android:id="@+id/resumePauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/play_pause_selector"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/previousButton"
        app:layout_constraintTop_toBottomOf="@+id/textTrackProgression"
        app:tint="@color/track_playing_background" />


</androidx.constraintlayout.widget.ConstraintLayout>



</layout>