<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="androidx.lifecycle.LiveData"/>
        <import type="android.view.View"/>
        <import type="com.example.musicapp.models.ListViewTrack"/>
        <variable
            name="currentTrack"
            type="LiveData&lt;ListViewTrack&gt;" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.TracksListFragment"
        android:background="@color/screen_background">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewRecyclerTracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layoutTrackController"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTrackController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="@{currentTrack == null ? View.GONE : View.VISIBLE}"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textCurrentTrackName"
                style="@style/TrackText.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{currentTrack.name}"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textCurrentTrackArtist"
                app:layout_constraintEnd_toStartOf="@+id/previousButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Track 1" />

            <TextView
                android:id="@+id/textCurrentTrackArtist"
                style="@style/TrackText.Artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginBottom="2dp"
                android:text="@{currentTrack.artist}"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/trackProgressSeekBar"
                app:layout_constraintEnd_toStartOf="@+id/previousButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Artist 1" />


            <ImageButton
                android:id="@+id/resumePauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/play_pause_selector"
                app:layout_constraintBottom_toTopOf="@+id/trackProgressSeekBar"
                app:layout_constraintRight_toLeftOf="@+id/nextButton"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/track_playing_background" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_next_arrow"
                app:layout_constraintBottom_toTopOf="@+id/trackProgressSeekBar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/track_playing_background" />

            <ImageButton
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_previous_arrow"
                app:layout_constraintBottom_toTopOf="@+id/trackProgressSeekBar"
                app:layout_constraintRight_toLeftOf="@+id/resumePauseButton"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/track_playing_background" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/trackProgressSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                app:indicatorColor="@color/track_playing_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:trackCornerRadius="10dp"
                app:trackThickness="6dp"
                android:max="@{currentTrack.length}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>